# sipxecs

config/: general.m4  mongo.m4
mak/: 00-modules.mk.in  10-rpm.mk.in
mongo/: .sipxecs.mk
sipXcommserverLib/: configure.ac
sipXcommserverLib/include/: Makefile.am
sipXcommserverLib/include/sipdb/: IdentityDB.h
sipXcommserverLib/src/: Makefile.am
sipXcommserverLib/src/sipdb/: IdentityDB.cpp  Makefile.am
sipXcommserverLib/src/sipdb/test/: IdentityDBTest.cpp
sipXconfig/neoconf/src/org/sipfoundry/sipxconfig/openacd/: FreeswitchMediaCommand.java  OpenAcdAgent.java  OpenAcdAgentConfigCommand.java  OpenAcdAgentGroup.java  OpenAcdClient.java  OpenAcdContext.java  OpenAcdContextImpl.java  OpenAcdLogConfigCommand.java  OpenAcdProvisioningContextImpl.java  OpenAcdQueue.java  OpenAcdQueueGroup.java  OpenAcdRecipeCondition.java  OpenAcdSkill.java  openacd.beans.xml
sipXconfig/neoconf/src/org/sipfoundry/sipxconfig/service/: SipxOpenAcdService.java  service.beans.xml
sipXconfig/neoconf/test/org/sipfoundry/sipxconfig/openacd/: OpenAcdContextTestIntegration.java
sipXconfig/web/src/org/sipfoundry/sipxconfig/rest/: BranchesResource.java  OpenAcdAgentGroupsResource.java  OpenAcdAgentsResource.java  OpenAcdClientsResource.java  OpenAcdDialStringsResource.java  OpenAcdLinesResource.java  OpenAcdQueueGroupsResource.java  OpenAcdQueuesResource.java  OpenAcdReleaseCodesResource.java  OpenAcdSettingsResource.java  OpenAcdSkillGroupsResource.java  OpenAcdSkillsResource.java  OpenAcdUtilities.java  PermissionsResource.java  RestUtilities.java  UserGroupPermissionsResource.java  UserGroupsResource.java  UserPermissionsResource.java  UsersResource.java  rest.beans.xml
sipXopenacd/src/erlang/: sipxplugin_poller.erl
sipXproxy/: .cproject
sipXproxy/lib/authplugins/: EnforceAuthRules.cpp
(+9 files in other folders)
